[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-better-at"
version = "0.1.0"
dependencies = []
authors = [
    { name = "Endstone Developers", email = "hello@endstone.dev" },
    { name = "Huang FTS427", email = "FTS427@outlook.com" },
]
description = "Better @"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["endstone", "plugin"]

[project.urls]
Homepage = "https://github.com/ZH-Server/endstone_better_at/"

[project.entry-points."endstone"]
better-at = "endstone_better_at:BetterAt"